tests/neg/symlits.scala
def f =
  import language.deprecated.symbolLiterals
  val x = 'Hello

val y = 'no  // error
